--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ section {
     width: 100%;
     height: 100vh;
     display: flex;
-    background: url("/img/login-background.jpg") no-repeat;
+    background: url("img/login-background.jpg") no-repeat;
     background-size: cover;
     background-position: center;
     animation: animateBg 15s linear infinite;
